Configuration manager clas for data ingestion

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -13,14 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import gdown"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-07-29T12:38:27.574348300Z",
+     "start_time": "2024-07-29T12:38:27.322179Z"
+    }
    }
   },
   {
@@ -90,11 +93,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY&confirm=t&uuid=f6e94162-a24f-4b76-931a-fd91b9977303\n",
+      "To: C:\\projects\\OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\\research\\Chest-CT-Scan-data.zip\n",
+      " 35%|███▌      | 17.3M/49.0M [08:21<22:54, 23.0kB/s]"
+     ]
+    }
+   ],
    "source": [
     "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
     "gdown.download(prefix+file_id, \"Chest-CT-Scan-data.zip\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-07-29T12:38:31.828295Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
