--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
@@ -102,8 +102,16 @@
       "From (original): https://drive.google.com/uc?/export=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY\n",
       "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1z0mreUtRmR-P-magILsDR3T7M6IkGXtY&confirm=t&uuid=f6e94162-a24f-4b76-931a-fd91b9977303\n",
       "To: C:\\projects\\OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\\research\\Chest-CT-Scan-data.zip\n",
-      " 35%|███▌      | 17.3M/49.0M [08:21<22:54, 23.0kB/s]"
+      "100%|██████████| 49.0M/49.0M [42:41<00:00, 19.1kB/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "'Chest-CT-Scan-data.zip'"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -112,8 +120,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-07-29T13:21:20.174345700Z",
      "start_time": "2024-07-29T12:38:31.828295Z"
     }
    }
