--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -121,6 +121,69 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import zipfile\n",
+    "import gdown\n",
+    "from src.cnnClassifier import logger\n",
+    "from src.cnnClassifier.utils.common import get_size"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def download_file(self)-> str:\n",
+    "        '''\n",
+    "        Fetch data from the url\n",
+    "        '''\n",
+    "\n",
+    "        try:\n",
+    "            dataset_url = self.config.source_URL\n",
+    "            zip_download_dir = self.config.local_data_file\n",
+    "            os.makedirs(\"artifacts/data_ingestion\", exist_ok=True)\n",
+    "            logger.info(f\"Downloading data from {dataset_url} into file {zip_download_dir}\")\n",
+    "\n",
+    "            file_id = dataset_url.split(\"/\")[-2]\n",
+    "            prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "            gdown.download(prefix+file_id,zip_download_dir)\n",
+    "\n",
+    "            logger.info(f\"Downloaded data from {dataset_url} into file {zip_download_dir}\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            raise e\n",
+    "\n",
+    "\n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
