Model trained and saved

--- a/research/model_trainer.ipynb
+++ b/research/model_trainer.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:10:45.995916100Z",
-     "start_time": "2024-07-31T10:10:45.993340300Z"
+     "end_time": "2024-07-31T12:28:57.145322700Z",
+     "start_time": "2024-07-31T12:28:57.142808100Z"
     }
    },
    "outputs": [],
@@ -34,8 +34,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:10:48.716231800Z",
-     "start_time": "2024-07-31T10:10:48.710719500Z"
+     "end_time": "2024-07-31T12:28:57.563824100Z",
+     "start_time": "2024-07-31T12:28:57.554151900Z"
     }
    }
   },
@@ -49,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:11:17.250664600Z",
-     "start_time": "2024-07-31T10:11:17.247635400Z"
+     "end_time": "2024-07-31T12:28:58.192018200Z",
+     "start_time": "2024-07-31T12:28:58.185005700Z"
     }
    }
   },
@@ -73,8 +73,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:11:23.852659800Z",
-     "start_time": "2024-07-31T10:11:23.848660Z"
+     "end_time": "2024-07-31T12:28:59.477826800Z",
+     "start_time": "2024-07-31T12:28:59.469822600Z"
     }
    }
   },
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:13:44.924641900Z",
-     "start_time": "2024-07-31T10:13:44.918457300Z"
+     "end_time": "2024-07-31T12:29:00.176495800Z",
+     "start_time": "2024-07-31T12:29:00.171044400Z"
     }
    }
   },
@@ -118,8 +118,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:14:11.181846Z",
-     "start_time": "2024-07-31T10:14:05.569800Z"
+     "end_time": "2024-07-31T12:29:07.085707200Z",
+     "start_time": "2024-07-31T12:29:00.773965100Z"
     }
    }
   },
@@ -166,8 +166,175 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T10:14:52.313981700Z",
-     "start_time": "2024-07-31T10:14:52.306975100Z"
+     "end_time": "2024-07-31T12:29:07.865258900Z",
+     "start_time": "2024-07-31T12:29:07.860410600Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "from zipfile import ZipFile\n",
+    "import tensorflow as tf\n",
+    "import time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T12:29:08.653918400Z",
+     "start_time": "2024-07-31T12:29:08.646906100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "class Training:\n",
+    "    def __init__(self, config: TrainingConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "    def get_base_model(self):\n",
+    "        self.model = tf.keras.models.load_model(\n",
+    "            self.config.updated_base_model_path\n",
+    "        )\n",
+    "        optimizer = tf.keras.optimizers.Adam()\n",
+    "        self.model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    def train_valid_generator(self):\n",
+    "\n",
+    "        datagenerator_kwargs = dict(\n",
+    "            rescale = 1./255,\n",
+    "            validation_split=0.20\n",
+    "        )\n",
+    "\n",
+    "        dataflow_kwargs = dict(\n",
+    "            target_size=self.config.params_image_size[:-1],\n",
+    "            batch_size=self.config.params_batch_size,\n",
+    "            interpolation=\"bilinear\"\n",
+    "        )\n",
+    "\n",
+    "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "            **datagenerator_kwargs\n",
+    "        )\n",
+    "\n",
+    "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
+    "            directory=self.config.training_data,\n",
+    "            subset=\"validation\",\n",
+    "            shuffle=False,\n",
+    "            **dataflow_kwargs\n",
+    "        )\n",
+    "\n",
+    "        if self.config.params_is_augmentation:\n",
+    "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "                rotation_range=40,\n",
+    "                horizontal_flip=True,\n",
+    "                width_shift_range=0.2,\n",
+    "                height_shift_range=0.2,\n",
+    "                shear_range=0.2,\n",
+    "                zoom_range=0.2,\n",
+    "                **datagenerator_kwargs\n",
+    "            )\n",
+    "        else:\n",
+    "            train_datagenerator = valid_datagenerator\n",
+    "\n",
+    "        self.train_generator = train_datagenerator.flow_from_directory(\n",
+    "            directory=self.config.training_data,\n",
+    "            subset=\"training\",\n",
+    "            shuffle=True,\n",
+    "            **dataflow_kwargs\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def save_model(path: Path, model: tf.keras.Model):\n",
+    "        model.save(path)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def train(self):\n",
+    "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
+    "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
+    "\n",
+    "        self.model.fit(\n",
+    "            self.train_generator,\n",
+    "            epochs=self.config.params_epochs,\n",
+    "            steps_per_epoch=self.steps_per_epoch,\n",
+    "            validation_steps=self.validation_steps,\n",
+    "            validation_data=self.valid_generator\n",
+    "        )\n",
+    "\n",
+    "        self.save_model(\n",
+    "            path=self.config.trained_model_path,\n",
+    "            model=self.model\n",
+    "        )\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T12:29:09.505670100Z",
+     "start_time": "2024-07-31T12:29:09.465251200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-31 14:29:10,319: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-31 14:29:10,321: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-31 14:29:10,323: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-31 14:29:10,324: INFO: common: created directory at: artifacts\\training]\n",
+      "[2024-07-31 14:29:10,811: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "Found 68 images belonging to 2 classes.\n",
+      "Found 275 images belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\projects\\OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\\venv\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[1m17/17\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m42s\u001B[0m 2s/step - accuracy: 0.5821 - loss: 1.3241 - val_accuracy: 0.8750 - val_loss: 0.2461\n",
+      "[2024-07-31 14:29:53,825: WARNING: saving_api: You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    training_config = config.get_training_config()\n",
+    "    training = Training(config=training_config)\n",
+    "    training.get_base_model()\n",
+    "    training.train_valid_generator()\n",
+    "    training.train()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T12:29:54.005383900Z",
+     "start_time": "2024-07-31T12:29:10.317955500Z"
     }
    }
   },
