--- a/research/04_model_evaluation.ipynb
+++ b/research/04_model_evaluation.ipynb
@@ -134,6 +134,81 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class Evaluation:\n",
+    "    def __init__(self, config: EvaluationConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "    def _valid_generator(self):\n",
+    "\n",
+    "        datagenerator_kwargs = dict(\n",
+    "            rescale = 1./255,\n",
+    "            validation_split=0.30\n",
+    "        )\n",
+    "\n",
+    "        dataflow_kwargs = dict(\n",
+    "            target_size=self.config.params_image_size[:-1],\n",
+    "            batch_size=self.config.params_batch_size,\n",
+    "            interpolation=\"bilinear\"\n",
+    "        )\n",
+    "\n",
+    "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "            **datagenerator_kwargs\n",
+    "        )\n",
+    "\n",
+    "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
+    "            directory=self.config.training_data,\n",
+    "            subset=\"validation\",\n",
+    "            shuffle=False,\n",
+    "            **dataflow_kwargs\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def load_model(path: Path) -> tf.keras.Model:\n",
+    "        return tf.keras.models.load_model(path)\n",
+    "\n",
+    "\n",
+    "    def evaluation(self):\n",
+    "        self.model = self.load_model(self.config.path_of_model)\n",
+    "        self._valid_generator()\n",
+    "        self.score = model.evaluate(self.valid_generator)\n",
+    "        self.save_score()\n",
+    "\n",
+    "    def save_score(self):\n",
+    "        scores = {\"loss\": self.score[0], \"accuracy\": self.score[1]}\n",
+    "        save_json(path=Path(\"scores.json\"), data=scores)\n",
+    "\n",
+    "\n",
+    "    def log_into_mlflow(self):\n",
+    "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
+    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "\n",
+    "        with mlflow.start_run():\n",
+    "            mlflow.log_params(self.config.all_params)\n",
+    "            mlflow.log_metrics(\n",
+    "                {\"loss\": self.score[0], \"accuracy\": self.score[1]}\n",
+    "            )\n",
+    "            # Model registry does not work with file store\n",
+    "            if tracking_url_type_store != \"file\":\n",
+    "\n",
+    "                # Register the model\n",
+    "                # There are other ways to use the Model Registry, which depends on the use case,\n",
+    "                # please refer to the doc for more information:\n",
+    "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
+    "                mlflow.keras.log_model(self.model, \"model\", registered_model_name=\"VGG16Model\")\n",
+    "            else:\n",
+    "                mlflow.keras.log_model(self.model, \"model\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
