--- a/research/04_model_evaluation.ipynb
+++ b/research/04_model_evaluation.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-08-01T23:53:08.132191800Z",
+     "start_time": "2024-08-01T23:53:08.124551Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -13,56 +17,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'C:\\\\projects\\\\OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\\\\research'"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%pwd"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-01T23:53:09.284852600Z",
+     "start_time": "2024-08-01T23:53:09.275535700Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "os.chdir(\"../\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-01T23:53:10.477456800Z",
+     "start_time": "2024-08-01T23:53:10.471446500Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import tensorflow as tf"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-01T23:53:23.692976500Z",
+     "start_time": "2024-08-01T23:53:11.977239100Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                       \u001B[1m❗❗❗ AUTHORIZATION REQUIRED ❗❗❗\u001B[0m                                        \n",
+      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">                                       <span style=\"font-weight: bold\">❗❗❗ AUTHORIZATION REQUIRED ❗❗❗</span>                                        \n</pre>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Open the following link in your browser to authorize the client:\n",
+      "https://dagshub.com/login/oauth/authorize?state=daf5ce10-1514-4f3b-8bf7-5f683144ff2e&client_id=32b60ba385aa7cecf24046d8195a71c07dd345d9657977863b52e7748e0f0f28&middleman_request_id=a65abe09f1ab1c39d7c2425aba007a6fc04b97da94f27063428f026725357e27\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Output()",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "825d87a2628c4e798d9b4706aede3592"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "",
+      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Accessing as tahahamdii\n",
+      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Accessing as tahahamdii\n</pre>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Initialized MLflow to track repo \u001B[32m\"tahahamdii/OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\"\u001B[0m\n",
+      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"tahahamdii/OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma\"</span>\n</pre>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Repository tahahamdii/OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma initialized!\n",
+      "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository tahahamdii/OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma initialized!\n</pre>\n"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import dagshub\n",
+    "dagshub.init(repo_owner='tahahamdii', repo_name='OncoFlow-Deep-Learning-MLOps-for-Adenocarcinoma', mlflow=True)\n",
+    "\n",
+    "import mlflow\n",
+    "with mlflow.start_run():\n",
+    "  mlflow.log_param('parameter name', 'value')\n",
+    "  mlflow.log_metric('metric name', 1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-02T00:07:53.662483600Z",
+     "start_time": "2024-08-02T00:07:20.343112800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    }
+   ],
    "source": [
     "model = tf.keras.models.load_model(\"artifacts/training/model.h5\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-02T00:08:57.614548700Z",
+     "start_time": "2024-08-02T00:08:54.591384200Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
-    "\n",
     "@dataclass(frozen=True)\n",
     "class EvaluationConfig:\n",
     "    path_of_model: Path\n",
@@ -73,7 +195,11 @@
     "    params_batch_size: int"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-02T00:29:33.598618300Z",
+     "start_time": "2024-08-02T00:29:33.541835900Z"
+    }
    }
   },
   {
